# summerschool

./: .gitignore  .gitmodules  COPYING  LICENSE.txt  README.md  about.yml  background_knowledge.md  background_material.md  exercise-instructions-lumi.md  exercise-instructions.md  exercise-instructions_mahti.md  exercise-instructions_puhti_mahti.md  prerequisites.md
.github/workflows/: cmake.yml  mpi-hello.yml  mpi-test.yml  pages-build-deploy.yml  pages-build-html.yml  pages-build-pdf.yml  pages-build.yml  pages-clean.yml  pages-deploy.yml  pages-html.yml  pages-pdf.yml  pages.yml  reuse.yml
.test/: config  manifest
Working-with-Unix-and-version-control/exercises/: makefile  prog.c
application-design/: README.md  about.yml
application-design-deployment/: README.md  about.yml
application-design-deployment/docs/: 01_application_design.md  02_application_examples.md  03_application_deployment.md
application-design/ci/: README.md
application-design/docs/: 01_design_choices.html  01_design_choices.md  02-documentation-testing.md  03-collaboration-release.md
application-performance/: README.md  about.yml
application-performance/demos/: Laplace_Multiarch  mandelbrot.c
application-performance/docs/: 01-application-performance-intro.md  01-application-performance.md  02-gpu-performance.md  02-mpi-performance.md  02-single-node-performance.md  02_gpu_performance.md  03-mpi-performance.md  03_gpu_performance.md  04-single-node-performance.md  application_performance_intro.md  mpi_performance.md  performance_analysis.md  single-node-performance.md
application-testing/: README.md  about.yml
application-testing/demos/: puhti_mpi_tests.sh  todo.md
application-testing/demos/heat_equation/ctest-gtest/: CMakeLists.txt  Makefile
application-testing/demos/heat_equation/ctest-gtest/src/: CMakeLists.txt  constants.hpp  core.cpp  core.hpp  field.cpp  field.hpp  io.cpp  io.hpp  lib.cpp  main.cpp  parallel.cpp  parallel.hpp  utilities.cpp  utilities.hpp
application-testing/demos/heat_equation/ctest-gtest/tests/: CMakeLists.txt
application-testing/demos/heat_equation/ctest-gtest/tests/googletest-1.14.0/: CMakeLists.txt
application-testing/demos/heat_equation/ctest-gtest/tests/integration_tests/: CMakeLists.txt  io_tests.cpp
application-testing/demos/heat_equation/ctest-gtest/tests/mpi_tests/: CMakeLists.txt  core_tests.cpp  full_run_tests.cpp  main.cpp  utilities_tests.cpp
application-testing/demos/heat_equation/ctest-gtest/tests/testdata/: input.json
application-testing/demos/heat_equation/ctest-gtest/tests/unit_tests/: CMakeLists.txt  field_tests.cpp  io_tests.cpp  utilities_tests.cpp
application-testing/demos/tdd_test/: .gitignore  CMakeLists.txt  Makefile
application-testing/demos/tdd_test/tests/: CMakeLists.txt
application-testing/demos/tdd_test/tests/unit_tests/: CMakeLists.txt  field_tests.cpp
application-testing/docs/: 01-testing.md  Makefile
build-systems/: about.yml
build-systems/demos/03-cmake/: CMakeLists.txt  hello.c  module.c
build-systems/demos/03-cmake/include/: config.h.in  module.h
build-systems/demos/04-kokkos/: CMakeLists.txt  reduce.cpp
build-systems/demos/05-kokkos-inline/: CMakeLists.txt  clone-kokkos.sh
build-systems/demos/06-heat-equation/: CMakeLists.txt  core.cpp  heat.cpp  main.cpp  modules  utilities.cpp
build-systems/docs/: 01-cmake.md
closing/: about.yml
closing/docs/: 01-closing.md
computer-platforms/: Makefile  README.md  about.yml  job_cpu.sh  job_gpu.sh  makefile
computer-platforms/building-running/: README.md  job_cpu.sh
computer-platforms/docs/: 01_Unix.md  01_modules_make_batch_jobs.md  02_Make_modules_and_batch_jobs.md
computer-platforms/scalability/: reference.md
computer-platforms/scalability-test/: README.md
computer-platforms/simple-building-running/: README.md  prog.cpp  util.cpp
data-analysis/: cards.csv
data-analysis/docs/: Data_science_and_visualization.md
debugging/: runthrough.md
debugging/docs/: 01-debugging.md
debugging/runthrough/: Makefile  io.c  main.c
demos/debugging/: README.md  runthrough.md
demos/misc/: get-together.F90
demos/mpi/: cart_comm.cpp  mpi-write.F90  ping-pong.c  scatterv.c  time-chain.c
demos/openmp/: hello.c  parallel-for.c  sections.F90  sections.c  tasks1.c  tasks2.c  variables.c
demos/optimization/: Makefile  core.c  heat.h  main.c  setup.c
demos/profiler/: Makefile  core.c  example.sh  heat.h  job-gpu.sh  main.c
docs/: TODO.md  conv2pdf.sh
docs/git/: README.md
docs/mpi/: mpi-c.md  mpi-fortran.md
exercises/dataanalysis/: R-crash-course.R
exercises/unix/: job_script.sh
gpu/: README.md  about.yml  error_checking.hpp
gpu-hip/: LICENSE  README.md  about.yml
gpu-hip/demos/: device_properties_hip.cpp  mpi-p2pcopy.cpp
gpu-hip/docs/: 01-kernels.md  02-streams.md  03-memory.md  04-fortran.md  04-memory.md  05-multi-gpu.md  06-optimisation.md  07-multi-gpu.md  Makefile  index
gpu-hip/error-checking/: README.md  error-checking.cpp
gpu-hip/events/: README.md  record.cpp
gpu-hip/hello-world/: README.md  hello.cpp
gpu-openmp/: README.md  about.yml  exercise-instructions-gpu-openmp.md  modules-cpu  modules-gpu
hip-programming/: exercise-instructions.md
hpc-ai/: about.yml
hybrid/: README.md  job_omp_puhti.sh
intro-to-hpc/: README.md  about.yml
mpi/: README.md  about.yml  job_mpi_puhti.sh
openmp/: README.md  about.yml
parallel-io/: README.md  about.yml  demo.md
press/: Makefile  convert-slides.sh  convert-titles.sh  create-print.sh  index  index.jam  jam-it.sh  title-c.md  title-course.md  title-debugging.md  title-design.md  title-fortran.md  title-gpu-hip.md  title-gpu-openmp.md  title-hybrid.md  title-io.md  title-lumi-overview.md  title-mpi-reference.md  title-mpi.md  title-notes.md  title-performance.md  title-quantum-computing.md  title-supercomputing.md  title-unix.md
qc/: about.yml
template/: README.md  about.yml
tools/: analyze-repo.py  eog.def  mpi_links.py  pick-participant.py  valid_mpi_links.yaml
unix/: job_script.sh
unix-version-control/: README.md  job_script.sh
welcome/: about.yml
(+2255 files in other folders)
